# EmulatorWiFi

./: CMakeLists.txt
.cache/clangd/index/: NetWork.cpp.DF26525222D96EB4.idx  NetWork.hpp.9047A161135814D7.idx  NetworkData.hpp.CCBBF887523BACC3.idx  Protocol.cpp.5136FF0672677A0F.idx  Protocol.hpp.246AD0AD34C08CB1.idx  json.hpp.933C94599C3068D6.idx  main.cpp.BC585DC92CBE6270.idx  socket_server.cpp.52D7B8E4E24343BE.idx  socket_server.hpp.F443835C9A7AF3CD.idx  wifi_device.cpp.61DE29D7E72D2529.idx  wifi_device.hpp.6AF0B65740817266.idx
src/: main.cpp
src/Tests/: Client.cpp  Test  test
src/ipc/: Protocol.cpp  Protocol.hpp  socket_server.cpp  socket_server.hpp  wifi_device.cpp  wifi_device.hpp
src/ipc/Network/: NetWork.cpp  NetWork.hpp  NetworkData.hpp  WiFi.json
